Fix for ticket #650: Close button spacing is broken for SwatMessageDisplay when SwatMessage has secondary content.
svn commit r15442

--- a/www/styles/swat-message-display.css
+++ b/www/styles/swat-message-display.css
@@ -36,6 +36,10 @@
 	padding-top: 12px;
 }
 
+.swat-message-with-secondary .swat-message-display-dismiss-link {
+	margin-top: 4px;
+}
+
 .swat-message-display-dismiss-link,
 .swat-message-display-dismiss-link:link,
 .swat-message-display-dismiss-link:visited {
